class ApplicationController < ActionController::Base
    before_action :authenticate_user!
    before_action :set_render_cart
    before_action :initialize_cart
    
    include ApplicationHelper
    include Pundit::Authorization

    def user
      @user = current_user
    end

    def set_render_cart
      @render_cart = true
    end
    
    def initialize_cart
      @cart ||= Cart.find_by(id: session[:cart_id])
    
      if @cart.nil?
        @cart = Cart.create
        session[:cart_id] = @cart.id
      end
    end
end
  