@startuml
class ApplicationController {
  -before_action :authenticate_user!
  -before_action :set_render_cart
  -before_action :initialize_cart
  +user()
  +set_render_cart()
  +initialize_cart()
}

class ApplicationHelper
class Pundit::Authorization
class Cart {
  id: Integer
}

class User {
  id: Integer
  #other attributes...
}

class Product {
  id: Integer
  title: String
  #other attributes...
}

class Orderable {
  id: Integer
  quantity: Integer
  product_id: Integer
}

class Inventory {
  # attributes...
}

class Order {
  # attributes...
}

class CartController {
  -before_action :authenticate_user!
  +show()
  +add()
  +finish_order()
  -order_params()
}

ApplicationController ..> User: @user
ApplicationController ..> Cart: @cart
Cart --o ApplicationController: has

CartController ..|> ApplicationController
CartController ..> User: (inherits from)
CartController ..> Cart: @cart
CartController ..> Product: @product
CartController ..> Orderable: current_orderable
Orderable --o CartController: uses

Orderable --o Product: has
Product --o CartController: used by

CartController ..> Inventory: uses
Inventory --o Product: has
Order --o Orderable: has
Order --o User: belongs to
@enduml
